fix(styles): codeblock header alignment

--- a/src/styles/_codeblock.scss
+++ b/src/styles/_codeblock.scss
@@ -18,7 +18,7 @@
 
 	&-header {
 		display: flex;
-		align-items: center;
+		align-items: start;
 		border-block-end: var(--thickness-site-hr) solid var(--border-site-body);
 		padding: 1ch;
 		font-size: var(--text-site-small);
